@@ -58,6 +58,16 @@ class System
         \AppRoot::redirect("map/".$map->name."/".$system->name);
     }
 
+    function getMarkscanned($arguments=[])
+    {
+        $system = \map\model\System::getSolarsystemByName(array_shift($arguments));
+        $map = \map\model\Map::findByName(array_shift($arguments));
+        $wormhole = \map\model\Wormhole::getWormholeBySystemID($system->id, $map->id);
+        $wormhole->markFullyScanned();
+
+        \AppRoot::redirect("map/".$map->name."/".$system->name);
+    }
+
     function getActivity($arguments=[])
     {
         $wormhole = new \map\model\Wormhole(array_shift($arguments));
