@@ -320,7 +320,7 @@
 					<img src="/images/default/save.png" align="left">
 					Save System
 				</button>
-				<button class="small" type="button" style="width: 180px;" onclick="markFullyScanned('{$system->id}');">
+				<button class="small" type="button" style="width: 180px;" onclick="document.location='/map/system/markscanned/{$system->name}/{$map->name}/'">
 					<img src="/images/default/scanned.recently.png" align="left">
 					Mark Full-scanned
 				</button>
